test_suite/alan-2022-examples/failing/001860_mutation.alan
source kaA begin else put "" end
